toolchain/internal/core/analysis/testdata/errors/naming/field_annotation_not_camel.vdl
// format:off
// @expect: E102

type User {
  @badAnn
  id string
}
